--- a/css/style.css
+++ b/css/style.css
@@ -113,13 +113,13 @@ header p {
         margin: 0;
     }
 
-    .goalkeepers,
+    /* .goalkeepers,
     .defenders,
     .midfielders,
     .forwards {
         display: flex;
         justify-content: space-evenly;
-    }
+    } */
 
     .player {
         flex-direction: column;
@@ -133,6 +133,34 @@ header p {
     .photo {
         order: -1;
         margin: 0;
+    }
+
+    .lineup {
+        flex-flow: row wrap;
+    }
+
+    #player-1 {
+        flex-basis: 100%;
+    }
+
+    #player-2,
+    #player-3,
+    #player-4,
+    #player-5,
+    #player-6,
+    #player-7,
+    #player-8,
+    #player-9 {
+        flex-basis: 25%;
+    }
+
+    #player-10,
+    #player-11 {
+        flex-basis: 50%;
+    }
+
+    .lineup>div:nth-child(odd) {
+        background-color: transparent;
     }
 
 }
