Created changeFormation function and implemented on 4-3-3 button

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,14 @@ header p {
     font-weight: 200;
 }
 
-/* Lineup */
+/* Formation Select Box Styles */
+
+.formation-select {
+    display: flex;
+    justify-content: center;
+}
+
+/* Lineup Box Styles*/
 
 .lineup {
     display: flex;
