--- a/css/style.css
+++ b/css/style.css
@@ -225,8 +225,34 @@ footer {
 
 }
 
-/* Styles for Screenshot using Html2Canvas */
+/* Styles for Screenshot Modal using Html2Canvas */
+
+#screenshotContainer {
+    display: none;
+    position:fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.close {
+    color:white;
+    position: absolute;
+    top: 10px;
+    right: 35px;
+    font-size: 35px;
+}
+
+#lineupImage {
+    position: relative;
+    margin: auto;
+    width: 75%;
+    max-width: 1000px;
+}
 
 canvas {
-    display: none;
+    object-fit: contain;
 }
