--- a/css/style.css
+++ b/css/style.css
@@ -248,11 +248,13 @@ footer {
 
 #lineupImage {
     position: relative;
+    display: grid;
     margin: auto;
-    width: 75%;
+    height: 100%;
     max-width: 1000px;
 }
 
 canvas {
-    object-fit: contain;
+    max-width: 100%;
+    max-height: 100vh;
 }
