Was able to add a class to clicked button. Need to figure out how to remove selected class from all non-clicked buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ button:hover {
     background-color: blueviolet;
 }
 
+.selected {
+    background-color: red;
+}
+
 /* Lineup Box Styles*/
 
 .lineup {
