--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,23 @@ header p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0 0 10px 0;
-    padding: 5px 0;
+    align-content: stretch;
+    align-items: stretch;
+    background: rgb(206, 240, 214);
+    width: 50%;
+    max-width: 900px;
+    align-self: center;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin-top: 1em;
 }
 
-.formation-select p {
+.formation-select h2 {
     flex-basis: 100%;
+    text-align: center;
+    font-size: 1.25em;
+    margin: 0;
+    padding: 0;
 }
 
 button {
@@ -63,11 +74,14 @@ button {
 }
 
 button:hover {
-    background-color: blueviolet;
+    background-color: #050018;
+    color: white;
 }
 
 .selected {
-    background-color: red;
+    background-color: #050018;
+    color: white;
+    font-weight: 600;
 }
 
 /* Lineup Box Styles*/
@@ -77,7 +91,7 @@ button:hover {
     flex-direction: column;
     justify-content: stretch;
     margin: 1em;
-    border: 1px solid black;
+    border: 3px solid #c5b5f2;
     border-radius: 25px;
 }
 
