--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,6 @@ h1 {
     margin: 0;
 }
 
-header p {
-    margin: .25em 0;
-    font-weight: 200;
-}
-
 /* Formation Select Box Styles */
 
 .formation-select {
@@ -173,6 +168,7 @@ footer {
         object-fit: cover;
         max-width: 150px;
         max-height: 150px;
+        box-shadow: 2px 2px 8px #050018;
     }
 }
 
