--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,47 @@ body {
 header {
     background-color: #c5b5f2;
     text-align: center;
-    font-size: 1.25em;
+    display: flex;
+    justify-content: space-between;
 }
 
-h1 {
+header h1 {
     margin: 0;
+    text-align: left
 }
+
+/* Navigation */
+
+.hamburger {
+    margin-right: 10px;
+}
+
+.hamburger span {
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #050018;
+    margin-bottom: 5px;
+    border-radius: 3px;
+}
+
+span:nth-child(1) {
+    margin-top: 5px;
+}
+
+nav {
+    display: none;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav a {
+    text-decoration: none;
+}
+
 
 /* Formation Select Box Styles */
 
