--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
     text-align: center;
     display: flex;
     justify-content: space-between;
+    padding: 1rem;
 }
 
 header h1 {
@@ -272,37 +273,4 @@ footer {
         background-color: transparent;
     }
 
-}
-
-/* Styles for Screenshot Modal using Html2Canvas */
-
-#screenshotContainer {
-    display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.close {
-    color:white;
-    position: absolute;
-    z-index: 2;
-    top: 10px;
-    right: 35px;
-    font-size: 100px;
-}
-
-#lineupImage {
-    margin: auto;
-    max-height: 90%;
-    max-width: 75%;
-}
-
-canvas {
-    max-width: 100%;
-    max-height: 100vh;
 }
