--- a/css/roster.css
+++ b/css/roster.css
@@ -7,6 +7,7 @@
 
 #forwards>* {
     flex: 1 1 auto;
+    transition: all 2s;
 }
 
 #forwards h1 {
@@ -18,11 +19,15 @@
     min-height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
-}
+    background-color: #c6b2f4;
+    background-blend-mode: overlay;
+} 
 
 .player-name {
     writing-mode: vertical-rl;
     margin: 0px;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 
 .player-hometown {
