--- a/css/roster.css
+++ b/css/roster.css
@@ -9,10 +9,6 @@ h2 {
     flex-direction: column;
 }
 
-#forwards>div {
-    transition: all 2s;
-}
-
 .player {
     height: 2.5rem;
     background-size: cover;
@@ -20,7 +16,12 @@ h2 {
     background-color: #c6b2f4;
     background-blend-mode:soft-light;
     padding: 0.25rem;
+    transition: height 2s;
 } 
+
+.player:hover {
+    border: 2px solid black;
+}
 
 .player-name {
     margin: 0px;
@@ -33,8 +34,15 @@ h2 {
     margin: 0;
 }
 
+.player-bio {
+    display: none;
+    margin: .25rem 0 0 0;
+    font-weight: 200;
+    font-size: .85rem;
+}
+
 .openPlayer {
-    height: 50vh;
+    height: 60vh;
 }
 
 .openPlayer>* {
