--- a/css/roster.css
+++ b/css/roster.css
@@ -4,7 +4,11 @@ h2 {
     margin: 0;
 }
 
-#forwards {
+main>div {
+    display:none;
+}
+
+.open {
     display: flex;
     flex-direction: column;
 }
