--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,25 @@ nav a {
 nav a:hover {
     color: white;
 }
+
+/* Put Nav into Banner at 800px */
+@media screen and (min-width: 800px) {
+    .hamburger {
+        display: none;
+    }
+    
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    nav a {
+        padding: 0px 10px;
+    }
+}
